@@ -22,6 +22,10 @@
 #include <FL/x.h>
 #include <FL/Fl_Shared_Image.h>
 
+#ifdef HAVE_LIBXPM
+	#include <X11/xpm.h>
+#endif
+
 #define EWINDOW 0xF3
 
 #define DEFAULT_ICON_THEME "edeneu"
@@ -243,14 +247,14 @@ static void xsettings_cb(const char* name, XSettingsAction action, XSettingsSett
 
 Window::Window(int X, int Y, int W, int H, const char* l) : Fl_Window(X, Y, W, H, l), 
 	inited(false), loaded_components(0), pref_uid(0), xs_cb(NULL), xs_cb_old(NULL), xs_cb_data(NULL),
-	s_cb(NULL), s_cb_data(NULL) { 
+	s_cb(NULL), s_cb_data(NULL), icon_pixmap(NULL) { 
 
 	type(EWINDOW);
 }
 
 Window::Window(int W, int H, const char* l) : Fl_Window(W, H, l),
 	inited(false), loaded_components(0), pref_uid(0), xs_cb(NULL), xs_cb_old(NULL), xs_cb_data(NULL), 
-	s_cb(NULL), s_cb_data(NULL) { 
+	s_cb(NULL), s_cb_data(NULL), icon_pixmap(NULL) { 
 
 	type(EWINDOW);
 }
@@ -343,12 +347,34 @@ XSettingsClient* Window::xsettings(void) {
 }
 
 void Window::show(void) {
+	clear_visible();
+
 	Fl_Window::show();
 
 	if(pref_atom) {
 		XChangeProperty(fl_display, fl_xid(this), 
 				pref_atom, XA_CARDINAL, 32, PropModeReplace, (unsigned char*)&pref_uid, 1);
 	}
+
+#ifdef HAVE_LIBXPM
+	if(!icon_pixmap)
+		return;
+
+	Pixmap pix, mask;
+	XpmCreatePixmapFromData(fl_display, DefaultRootWindow(fl_display), (char**)icon_pixmap, &pix, &mask, NULL);
+
+	XWMHints* hints = XGetWMHints(fl_display, fl_xid(this));
+	if(!hints)
+		return;
+
+	hints->icon_pixmap = pix;
+	hints->icon_mask = mask;
+	hints->flags |= IconPixmapHint | IconMaskHint;
+
+	XSetWMHints(fl_display, fl_xid(this), hints);
+	XFree(hints);
+	XFlush(fl_display);
+#endif
 }
 
 EDELIB_NS_END
